# SupraWall

./: .antigravityignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GROWTH-HACKS-4-11-BUILDING-PLAN.md  GROWTH-HACKS-BUILDING-PLAN.md  GSC_URL_Indexation_Checklist.md  GSC_URL_Indexation_Strategy_March2026.md  GTM 10K Battleplan  IMPLEMENTATION_PLAN_Layer2_AI_Semantic.txt  Implementation Plan  LICENSE  MCP_SUBMISSION_README.md  PRIVACY.md  PaperClip Integrations  QUICK_SUBMIT.md  README.md  README_FULL.md  SECURITY.md  SEO_Execution_Log_2026-03-20.md  SEO_Weekly_Plan_2026-03-25.md  SUBMISSION_ASSETS.md  SUBMISSION_GUIDE.md  SUBMISSION_ROADMAP.md  SupraWall Brand Guide.docx  SupraWall_Agent_Army_Blueprint.docx  SupraWall_Communication_Strategy.docx  SupraWall_Final_Launch_Review.md  SupraWall_Free_vs_Paid_Explained.docx  SupraWall_GTM_Strategy.docx  SupraWall_OpenSource_Strategy.docx  SupraWall_SEO_Page_Briefs_March2026.docx  TESTING_CHECKLIST.md  TIER_SYSTEM_FIXES_SUMMARY.md  (+27 more)
.claude/: settings.local.json
.cursor/: mcp.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  dify-plugin-publish.yml  publish-action.yml  publish-cli.yml  release.yml
.turbo/cache/: 01cdca53b5ea9ce0-manifest.json  01cdca53b5ea9ce0-meta.json  075e0a341985013a-manifest.json  075e0a341985013a-meta.json  0971ac8c46dcf6f8-manifest.json  0971ac8c46dcf6f8-meta.json  0971ac8c46dcf6f8.tar.zst  0bbf5211a92cdeb5-manifest.json  0bbf5211a92cdeb5-meta.json  16d3e9a0bf6da93f-manifest.json  16d3e9a0bf6da93f-meta.json  16f988a5119c721f-manifest.json  16f988a5119c721f-meta.json  16f988a5119c721f.tar.zst  267a2fcdf79ce70e-manifest.json  267a2fcdf79ce70e-meta.json  4724d4a3ba359de6-manifest.json  4724d4a3ba359de6-meta.json  4724d4a3ba359de6.tar.zst  587fce4a15cc169e-manifest.json  587fce4a15cc169e-meta.json  58d2544af8e44cd0-manifest.json  58d2544af8e44cd0-meta.json  5c2138fbd02824af-manifest.json  5c2138fbd02824af-meta.json  641f888b3a52cc81-manifest.json  641f888b3a52cc81-meta.json  641f888b3a52cc81.tar.zst  6e64809763d8baa0-manifest.json  6e64809763d8baa0-meta.json  70b66ccc0031f188-manifest.json  70b66ccc0031f188-meta.json  (+48 more)
Blog/: agent-commerce-eu-ai-act-2026-03-13.md  supra-wall-vs-portkey-compliance-2026-03-13.md
Marketing/: Brand Guidelines  FINAL_EXECUTION_REPORT.md  GROWTH-HACKS-4-11-BUILDING-PLAN.md  GROWTH-HACKS-BUILDING-PLAN.md  ICP-SW  SEO_Execution_Log_2026-03-25.md  SEO_Weekly_Plan_2026-03-20.md  SEO_Weekly_Plan_2026-03-24.md  SupraWall_Feature_Landing_Pages.docx  SupraWall_SEO_GEO_Audit_March2026.docx  SupraWall_SEO_GEO_Baseline_March2026.docx  Suprawall ecosystem distribution plan  Suprawall marketing guide  langchain-tutorial.md  vercel-article.md
PR_DRAFTS/: langchain_docs_pr.md  vercel_marketplace_app.md
agentgate-core/: agentgate-core-1.0.0.tgz  index.ts  package-lock.json  package.json  types.ts
agentgate-python/: .gitignore  README.md  pyproject.toml
agentgate-python/agentgate/: __init__.py  cost.py  gate.py  identity.py  langchain.py  openai.py
agentgate-sdk/: README.md  SKILL.md  package.json
agentgate-server/: README.md  docker-compose.yml  package-lock.json  package.json
agentgate-webhooks/: package-lock.json  package.json
agentguard-sdk/: SKILL.md  package-lock.json  package.json  tsconfig.json
content/: forum-answers.md  github-issues.md  interrupt-2026-talk.md  langchain-docs-pr.md  langchain-tutorial.md  vercel-article.md
dashboard/: .gitignore  check_key.js  delete_all_agents.js  next.config.ts  package-lock.json  package.json  test_env.js  vercel.json
docs/: eu-ai-act.md  policies.md  policy-spec.md  roadmap.md
examples/: billing-security-tutorial.md
firebase/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules
governance/: ORCHESTRATOR_PROTOCOL.md
huggingface_space/: README.md  app.py  requirements.txt
plugins/autogen-agentgate/: pyproject.toml
plugins/autogen-agentgate/autogen_agentgate/: __init__.py
plugins/autogen-suprawall/: pyproject.toml
plugins/autogen-suprawall/autogen_suprawall/: __init__.py
plugins/crewai-agentgate/: pyproject.toml
plugins/crewai-agentgate/crewai_agentgate/: __init__.py
plugins/crewai-suprawall/: pyproject.toml
plugins/crewai-suprawall/crewai_suprawall/: __init__.py
plugins/langchain-suprawall-python/: pyproject.toml
plugins/langchain-suprawall-python/langchain_suprawall/: __init__.py
plugins/llama-index-suprawall/: pyproject.toml
plugins/llama-index-suprawall/llama_index_suprawall/: __init__.py
policies/: budget-guardrail.json  crewai-safe.json  eu-ai-act-audit.json  langchain-safe.json  openai-assistants-safe.json  pii-protection.json  role-based-access.json
schemas/: suprawall.policy.schema.json
scratch/: recover_db.py
scripts/: audit-time-to-value.sh  seed_traces.manifest.json  seed_traces.py  setup-git-hooks.sh  smoke_test_auth.sh
stripe-app/: package.json  stripe-app.json
suprawall-core/: index.ts  package.json  suprawall-core-1.0.0.tgz  tsconfig.json  types.ts
suprawall-cowork-plugin/: .env.example  CHANGELOG.md  README.md  SKILL.md  TESTING.md  commands.yaml  manifest.json  mcp_server.py  plugin.yaml  requirements.txt  sub_agent.md
suprawall-langchain/: README.md  pyproject.toml
suprawall-langchain/suprawall_langchain/: __init__.py
suprawall-python/: README.md  pyproject.toml
suprawall-python/suprawall/: __init__.py  cost.py  gate.py  identity.py  langchain.py  openai.py
suprawall-python/tests/: test_basic.py
suprawall-sdk/: .npmrc  README.md  SKILL.md  package.json  simulate_hitl.ts
suprawall-server/: API_GUIDE.md  README.md  approve_request.js  check_key.js  package-lock.json  package.json  seed_simulation.js  setup_db.sql  test_regex.js  test_replace.js
suprawall-webhooks/: package.json
templates/: integration-template.json
tmp/: awesome_pr_sprint.py  create_prs.py  finalize_prs.py  test_policy.json
(+438 files in other folders)
