[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suprawall-langchain"
version = "0.1.0"
description = "SupraWall integration for LangChain — natively enforce security policies on every tool call."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "security", "langchain", "gateway", "policy"]
dependencies = [
    "suprawall>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.urls]
Homepage      = "https://suprawall.ai"
Repository    = "https://github.com/wiserautomation/suprawall"

[tool.setuptools.packages.find]
where = ["."]
include = ["suprawall_langchain*"]
