[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suprawall"
version = "0.1.0"
description = "The security gateway for AI agents — auth, rate limiting, and policy enforcement in one line."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "security", "mcp", "langchain", "openai", "gateway", "policy"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
openai    = ["openai-agents>=0.0.3"]
all       = ["langchain-core>=0.2.0", "openai-agents>=0.0.3"]

[project.urls]
Homepage      = "https://agent-gate-rho.vercel.app/"
Repository    = "https://github.com/wiserautomation/suprawall"
"Bug Tracker" = "https://github.com/wiserautomation/suprawall/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["suprawall*"]
