[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suprawall"
version = "1.0.0"
description = "The Stripe of AI Agent Security"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "security", "mcp", "langchain", "openai", "gateway", "policy"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai    = ["openai-agents>=0.0.3"]
all       = ["openai-agents>=0.0.3"]

[project.urls]
Homepage      = "https://www.supra-wall.com"
Repository    = "https://github.com/wiserautomation/suprawall"
"Bug Tracker" = "https://github.com/wiserautomation/suprawall/issues"

[tool.hatch.build.targets.wheel]
packages = ["suprawall"]

[tool.hatch.build.targets.sdist]
exclude = ["venv", "tests", ".env"]
