[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autogen-suprawall"
version = "0.1.0"
description = "Official SUPRA-WALL security integration for AutoGen"
authors = ["SUPRA-WALL <hello@suprawall.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
