[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai-agentgate"
version = "0.1.0"
description = "Official AgentGate security integration for CrewAI"
authors = ["AgentGate <hello@agentgate.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
